# whats-the-tab

./: .dockerignore  .env.example  .gitignore  CHECKPOINT_CONVERSION_COMPLETE.md  CHECKPOINT_SETUP.md  DOCKER.md  Dockerfile  Dockerfile.web  LICENSE  PYTORCH_DJANGO_INTEGRATION.md  PYTORCH_IMPLEMENTATION_SUMMARY.md  README.md  audio_hf.ipynb  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  main.ipynb  main.py  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements-web.txt  requirements.txt  run_dramatiq.py  supervisord.conf
accounts/: views.py
accounts/templates/: base.html
dataset/john-mayer/: 3_why-georgia.tab  edge-of-desire.gp5  in-your-atmosphere.gp5  something-like-olivia.gp5  stop-this-train.gp5
docs/: DEADLINES.md  TODO.md  mt3-README.md  session-2026-04-30.md  system-design.md  vast-deploy.md
docs/research/: 1.txt  encoder_input_tokens_explanation.md
musictranscription/: settings.py  urls.py  wsgi.py
pytorch_mt3/: pytorch_model.py  pytorch_spectrograms.py  standalone_inference.py
pytorch_mt3/mt3_decoding/: __init__.py  metrics_utils.py  note_sequences.py  run_length_encoding.py  vocabularies.py
research/: Audio Transcription Context.txt  FINAL_PYTORCH_SUMMARY.md  journal.txt  readme.md
research/notebooks/: generate.ipynb
scripts/: upload_checkpoint_to_release.sh
src/: TranscriptionModel.py
src/mt3-transcription/: DEPENDENCY_REALITY_CHECK.md  PYTORCH_MT3_README.md  acoustic_guitar_only.midi  index.ipynb  (+5 more)
transcribeapp/: ml_pytorch.py  models.py  queue.py  tasks.py  urls.py  views.py
(+72 files in other folders)
