[project]
name = "whats-the-tab"
version = "0.1.0"
description = "Django app for transcribing music from audio files"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "Django>=5.0,<5.1",
  "django-cleanup>=8.1,<9",
  "django-cors-headers>=4.3,<5",
  "django-allauth>=0.63,<1",
  "djangorestframework>=3.15,<4",
  "dj-rest-auth>=6.0,<7",
  "redis>=5,<6",
  "gunicorn>=22,<23",
  "python-dotenv>=1.0,<2",
  "requests>=2.31,<3",
  "numpy>=1.26,<3",
  "note-seq>=0.0.5",
  "pytube>=15,<16",
  "psycopg2-binary>=2.9,<3",
  "dj-database-url>=2,<3",
]

[project.optional-dependencies]
gpu = [
  "torch>=2.3,<3",
  "torchaudio>=2.3,<3",
  "torchcodec>=0.10,<0.11",
  "numba>=0.61,<1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
